# nfl_Scraping_Stats

./: README.md  __main__.py  get_2022_week1_schedule.py  pyproject.toml
nfl_scraping_stats/: __main__.py  filter_for_rowsFunction.py  hello.py
